various minor fixes across the board. Yes, I know.
